css tweaks * introduce canvas class to override global (element) settings applied by UIKIT (see issue #1128) * remove margins between tracks -- for ROI rendering without gaps

--- a/css/igv.css
+++ b/css/igv.css
@@ -860,6 +860,9 @@
     font-weight: 700;
     color: #141414; }
 
+.igv-canvas {
+  all: initial; }
+
 .igv-root-div {
   position: relative;
   left: 0;
@@ -1034,16 +1037,16 @@
   width: 36px;
   height: 100%;
   background: white;
-  margin-top: 5px;
-  margin-bottom: 5px; }
+  margin-top: 0px;
+  margin-bottom: 0px; }
 
 .igv-left-hand-gutter {
   position: absolute;
   left: 0;
   width: 50px;
   height: 100%;
-  margin-top: 5px;
-  margin-bottom: 5px; }
+  margin-top: 0px;
+  margin-bottom: 0px; }
   .igv-left-hand-gutter canvas {
     position: absolute; }
 
@@ -1062,8 +1065,8 @@
   top: 0;
   width: 100%;
   height: 100%;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 0px;
+  margin-bottom: 0px;
   z-index: 256;
   background-color: rgba(68, 134, 247, 0.25); }
 
@@ -1073,8 +1076,8 @@
   right: 36px;
   width: 12px;
   margin-left: 2px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 0px;
+  margin-bottom: 0px;
   height: 100%;
   box-sizing: border-box;
   font-size: medium;
@@ -1095,7 +1098,7 @@
 .igv-track-label {
   position: absolute;
   left: 8px;
-  top: 4px;
+  top: 8px;
   width: auto;
   height: auto;
   max-width: 200px;
@@ -1130,8 +1133,8 @@
   right: 0;
   width: 14px;
   height: 100%;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 0px;
+  margin-bottom: 0px;
   background-color: white; }
   .igv-scrollbar-outer-div div {
     position: absolute;
